2012-01-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/scan.boot, src/interp/cparse.boot,
	src/interp/g-error.boot, src/boot/typars.boot,
	src/boot/btscan2.boot: Add a few variable declarations.

2012-01-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	
	* src/algebra/fraction.spad.pamphlet,
	src/algebra/jet.spad.pamphlet,
	src/algebra/modhpsol.spad.pamphlet,
	src/algebra/sregset.spad.pamphlet,
	src/algebra/regset.spad.pamphlet,
	src/algebra/expr.spad.pamphlet,
	src/input/fixed.input.pamphlet,
	src/input/knot2.input.pamphlet,
	src/interp/parsing.lisp, src/interp/bootlex.lisp,
	src/lisp/fricas-package.lisp: Misc cleanups.
	src/algebra/jet.spad.pamphlet: eliminate use of #1, #2,...

2011-12-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Misc cleanups.

2011-12-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Simplify build of Shoe.
	* src/boot/initial-env.lisp: Convert macros to functions,
	move remaining macros to:
	src/lisp/fricas-lisp.lisp.
	src/lisp/fricas-package.lisp: Create "BOOTTRAN" package.
	src/boot/ptyout.boot, src/boot/btincl2.boot,
	src/interp/vmlisp.lisp, src/interp/sys-pkg.lisp,
	src/boot/Makefile.in: Adjust.
	
2011-12-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/bootlex.lisp, src/interp/cattable.boot,
	src/interp/compiler.boot, src/interp/daase.lisp,
	src/interp/debug.lisp, src/interp/g-boot.boot,
	src/interp/g-error.boot, src/interp/i-output.boot,
	src/interp/i-syscmd.boot, src/interp/i-toplev.boot,
	src/interp/macros.lisp, src/interp/patches.lisp,
	src/interp/record.boot, src/interp/spad.lisp:
	Misc cleanups.
	src/interp/sockio.lisp: Remove, convert and move
	content to: src/interp/server.boot
	src/interp/Makefile.in: Adjust.

2011-12-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/s-parser.boot: Support braces for grouping.

2011-12-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp: Search for 'TRAP-FPE' also
	in package 'SI'.
