@@ -1,5 +1,10 @@
 2012-01-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/bootlex.lisp, src/interp/parsing.lisp,
+	src/interp/s-parser.boot: Simplify Spad parser.
+
+2012-01-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/scan.boot, src/interp/cparse.boot,
 	src/interp/g-error.boot, src/boot/typars.boot,
 	src/boot/btscan2.boot: Add a few variable declarations.
